# LFL

./: .clang-format  .doxygen.conf  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Source/: CMakeLists.txt
Source/Database/: CMakeLists.txt  Models.cpp  Models.h
Source/XMLParser/: CMakeLists.txt  Parser.cpp  Parser.h
Source/lfl/: CMakeLists.txt  lfl.cpp
Source/lfl-test/: CMakeLists.txt  XMLParserTest.cpp  XMLParserTest.h  lfl-test.cpp
source/lfl-test/: XMLParserTest.h  lfl-test.cpp
